# ObjektViz

./: .gitignore  404.html  README.md  index.html  main.py  pyproject.toml
.github/workflows/: publish.yml
backend-concepts/: index.html
examples/: generic_ocel_viewer.py  generic_ocel_viewer_neo4j.py  kuzu_example_helpers.py  token_replay_helper.py
examples/.streamlit/: config.toml
examples/ocel/kuzudb/: ocel2_import.py  ocel2_import_queries.py  ocel2_proclet_queries.py  ocle_kuzu.py  process_ocle_to_ekg_kuzu.py
feature-spotlight/: index.html
objektviz-docs/: mkdocs.yml
objektviz-docs/docs/: backend-concepts.md  control-components.md  feature-spotlight.md  index--.md  index.md  streamlit-components.md
objektviz/backend/: BackendConfig.py  dot_graph_builder.py  utils.py
objektviz/backend/adaptors/: kuzudb.py  neo4j.py  shared.py
objektviz/backend/dot_elements/: AbstractDotElement.py  AbstractDotNode.py  DotEdge.py  DotNode.py  __init__.py
objektviz/backend/filters/: AbstractFilter.py  AndFilter.py  DummyFilter.py  MatchFilter.py  NotFilter.py  OrFilter.py  RangeFilter.py
objektviz/backend/shaders/: AbstractShader.py  NormalizedShader.py  PercentileShader.py  RobustScalerShader.py  __init__.py
objektviz/frontend/: __init__.py
objektviz/frontend/source/: index--.html  index-backup-9jan.html  index-bck-10-27-25.html  index.html  streamlit-boilerplate.js
objektviz/frontend/source/plugins/: advanced-token-replay-plugin.js  click-interaction-plugin.js  resize-plugin.js  trace-highlight-plugin.js
objektviz/streamlit/: components.py  utils.py
search/: search_index.json
src/objektviz/backend/: BackendConfig.py  SessionState.py  dot_graph_builder.py  utils.py
src/objektviz/backend/adaptors/: kuzudb.py  neo4j.py  shared.py
src/objektviz/backend/databse/: AbstractRepository.py  DBNode.py
src/objektviz/backend/dot_elements/: AbstractDotEdge.py  AbstractDotElement.py  AbstractDotNode.py  __init__.py
src/objektviz/backend/filters/: AndFilter.py  DummyFilter.py  OrFilter.py  __init__.py
src/objektviz/backend/shaders/: AbstractShader.py  NormalizedShader.py  PercentileShader.py
src/objektviz/frontend/: __init__.py
src/objektviz/frontend/source/: index.html  objektviz.js
src/objektviz/frontend/source/plugins/: advanced-token-replay-plugin.js  click-interaction-plugin.js  d3-helpers.js  hover-interaction-plugin.js  straight-sync-edge-plugin.js
src/objektviz/streamlit/: components.py  utils.py
src/objektviz/streamlit/histogram_slider/: __init__.py  histogram_slider.css  histogram_slider_frontend.js
streamlit-components/: index.html
