[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "objektviz"
version = "0.2.2"
description = "ObjektViz is a visualizer for object-centric process models that enables users to explore and analyze even _very complex_ processes involving multiple interacting objects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "kuzu>=0.11.3",
    "matplotlib>=3.10.7",
    "neo4j>=6.0.3",
    "scikit-learn>=1.7.2",
    "streamlit[charts]>=1.51.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
publish = ["build", "twine"]

[project.urls]
Homepage = "https://mamiksik.github.io/ObjektViz/"
Repository = "https://github.com/mamiksik/ObjektViz.git"


[tool.setuptools.packages.find]
where = ["src"]
include = ['objektviz*']

[tool.uv.sources]
objektviz = { workspace = true, editable = true }


[dependency-groups]
dev = [
    "objektviz",
    "ruff>=0.14.13",
]
