[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "objektviz"
version = "0.3.1"
description = "ObjektViz is a visualizer for object-centric process models that enables users to explore and analyze even _very complex_ processes involving multiple interacting objects"
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Martin Miksik", email = "mamiksik@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.7",
    "plotly>=6.5.2",
    "scikit-learn>=1.7.2",
    "streamlit-adjustable-columns>=0.2.1",
    "streamlit-sortables>=0.3.1",
    "streamlit[charts]>=1.55.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
publish = ["build", "twine"]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.7.1"]
kuzu = ["kuzu"]
neo4j = ["neo4j"]

[project.urls]
Homepage = "https://mamiksik.github.io/ObjektViz/"
Repository = "https://github.com/mamiksik/ObjektViz.git"


[tool.setuptools.packages.find]
where = ["src"]
include = ['objektviz*']


[tool.setuptools.package-data]
objektviz = [
    "frontend/**/*.html",
    "frontend/**/*.js",
    "frontend/source/*",
    "streamlit/histogram_slider/**/*.html",
    "streamlit/histogram_slider/**/*.js",
    "streamlit/histogram_slider/**/*.css",
]

[tool.uv.sources]
objektviz = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "objektviz",
    "ruff>=0.14.13",
    "wfork-streamlit-profiler>=1.6.0"
]
